--- a/GameBox/MainEntry/Info.plist
+++ b/GameBox/MainEntry/Info.plist
@@ -41,5 +41,18 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <key>NSAllowsArbitraryLoads</key>
+        <true/>
+    </dict>
+    <key>NSCameraUsageDescription</key>
+    <string>是否同意应用访问您的相机?</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>是否同意应用访问您的麦克风?</string>
+    <key>NSPhotoLibraryAddUsageDescription</key>
+    <string>是否同意应用访问您的相册?</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>是否同意应用访问您的相册?</string>
 </dict>
 </plist>
