--- a/GameBox/MainEntry/Info.plist
+++ b/GameBox/MainEntry/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<string>zh_CN</string>
 	<key>CFBundleDisplayName</key>
 	<string>游戏盒子-alpha</string>
 	<key>CFBundleExecutable</key>
@@ -41,28 +41,28 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-    <key>NSAppTransportSecurity</key>
-    <dict>
-        <key>NSExceptionDomains</key>
-        <dict>
-            <key>preguntapp.mx</key>
-            <dict>
-                <key>NSExceptionRequiresForwardSecrecy</key>
-                <true/>
-                <key>NSIncludesSubdomains</key>
-                <true/>
-            </dict>
-        </dict>
-        <key>NSAllowsArbitraryLoads</key>
-        <true/>
-    </dict>
-    <key>NSCameraUsageDescription</key>
-    <string>是否同意应用访问您的相机?</string>
-    <key>NSMicrophoneUsageDescription</key>
-    <string>是否同意应用访问您的麦克风?</string>
-    <key>NSPhotoLibraryAddUsageDescription</key>
-    <string>是否同意应用访问您的相册?</string>
-    <key>NSPhotoLibraryUsageDescription</key>
-    <string>是否同意应用访问您的相册?</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>preguntapp.mx</key>
+			<dict>
+				<key>NSExceptionRequiresForwardSecrecy</key>
+				<true/>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+			</dict>
+		</dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>是否同意应用访问您的相机?</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>是否同意应用访问您的麦克风?</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>是否同意应用访问您的相册?</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>是否同意应用访问您的相册?</string>
 </dict>
 </plist>
