--- a/GameBox/MainEntry/Info.plist
+++ b/GameBox/MainEntry/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>zh_CN</string>
 	<key>CFBundleDisplayName</key>
-	<string>游戏盒子-alpha</string>
+	<string>185手游</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -17,11 +17,34 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.2.0</string>
+	<string>2.2.1</string>
 	<key>CFBundleVersion</key>
-	<string>220</string>
+	<string>221</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>preguntapp.mx</key>
+			<dict>
+				<key>NSExceptionRequiresForwardSecrecy</key>
+				<true/>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+			</dict>
+		</dict>
+	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>是否同意应用访问您的相机?</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>是否同意应用访问您的麦克风?</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>是否同意应用访问您的相册?</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>是否同意应用访问您的相册?</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -41,28 +64,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>NSAppTransportSecurity</key>
-	<dict>
-		<key>NSExceptionDomains</key>
-		<dict>
-			<key>preguntapp.mx</key>
-			<dict>
-				<key>NSExceptionRequiresForwardSecrecy</key>
-				<true/>
-				<key>NSIncludesSubdomains</key>
-				<true/>
-			</dict>
-		</dict>
-		<key>NSAllowsArbitraryLoads</key>
-		<true/>
-	</dict>
-	<key>NSCameraUsageDescription</key>
-	<string>是否同意应用访问您的相机?</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>是否同意应用访问您的麦克风?</string>
-	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>是否同意应用访问您的相册?</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>是否同意应用访问您的相册?</string>
 </dict>
 </plist>
