--- a/GameBox/MainEntry/Info.plist
+++ b/GameBox/MainEntry/Info.plist
@@ -18,6 +18,19 @@
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>2.2.4</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>com.sy185Box.TWKJ</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.sy185Box.TWKJ.test</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>224</string>
 	<key>LSRequiresIPhoneOS</key>
