--- a/GameBox/MainEntry/Info.plist
+++ b/GameBox/MainEntry/Info.plist
@@ -40,6 +40,16 @@
 				<string>wx998abec7ee53ed78</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>185game</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>185game</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>245</string>
